# plugin-examples

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
go/amadeus-flight/: .env.example  .gitignore  README.md  go.mod  main.go  noorle.yaml
go/amadeus-flight/wit/: world.wit
go/weather/: README.md  build.sh  go.mod  main.go  noorle.yaml  prepare.sh
go/weather/wit/: world.wit
javascript/javascript-sandbox/: .gitignore  README.md  app.js  build.sh  noorle.yaml  package.json  prepare.sh
javascript/javascript-sandbox/wit/: world.wit
javascript/weather/: README.md  app.js  noorle.yaml  package.json
javascript/weather/wit/: world.wit
python/python-sandbox/: .gitignore  README.md  app.py  noorle.yaml  prepare.sh  pyproject.toml
python/python-sandbox/additional_modules/: README.md  __init__.py
python/python-sandbox/wit/: world.wit
python/weather/: README.md  app.py  build.sh  pyproject.toml
python/weather/wit/: world.wit
rust/arxiv/: Cargo.toml  README.md  noorle.yaml
rust/arxiv/src/: lib.rs  types.rs
rust/arxiv/wit/: world.wit
rust/exchange-rate/: Cargo.toml  README.md  noorle.yaml  prepare.sh
rust/exchange-rate/src/: lib.rs  types.rs
rust/exchange-rate/wit/: world.wit
rust/news/: .env.example  .gitignore  Cargo.toml  README.md  build.sh  noorle.yaml
rust/news/src/: lib.rs  types.rs
rust/news/wit/: world.wit
rust/weather/: .env.example  Cargo.toml  README.md  build.sh
rust/weather/src/: lib.rs  (+1 more)
typescript/weather/: .env.example  .gitignore  README.md  app.ts  build.sh  noorle.yaml  package.json  prepare.sh  tsconfig.json  wasi.d.ts
(+1 files in other folders)
