[project]
name = "python-sandbox"
version = "0.1.0"
description = "A Noorle plugin built with Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "componentize-py==0.17.2",
]

# Add additional dependencies here as needed
# For example, if you need HTTP support:
# dependencies = [
#     "componentize-py==0.17.2",
#     "httpx==0.24.1",
# ]