[project]
name = "weather"
version = "0.1.0"
description = "Weather component for fetching current weather data (Python)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "componentize-py==0.17.2",
]

# Add additional dependencies here as needed
# For example, if you need HTTP support:
# dependencies = [
#     "componentize-py==0.17.2",
#     "httpx==0.24.1",
# ]